HHH-19846 - Drop JUnit 4 usage: org.hibernate.orm.test.jpa.query
Signed-off-by: Jan Schatteman <jschatte@redhat.com>